<resources>
    <string name="app_name">Shikshak Arohan</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer dashboard_toolbar_menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_today_attendance">Mark Attendance</string>
    <string name="nav_self_track">Self Track</string>
    <string name="nav_self_track_day">Day</string>
    <string name="nav_self_track_weekly">Weekly</string>
    <string name="nav_self_track_monthly">Monthly</string>
    <string name="nav_self_track_yearly">Yearly</string>
    <string name="nav_to_do">To Do</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>

    <!-- Toolbar titles when navigation dashboard_toolbar_menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Courses</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_dashboard">DASHBOARD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="title_activity_main">Shikshak Arohan</string>
    <string name="title_activity_to_do">To Do</string>
    <string name="title_activity_add_school">Add School</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="pick_options">pick_options</string>

    <string name="description_fingerprint_icon">Fingerprint icon</string>

    <string name="sign_in">Sign in</string>

    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Verification successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key" >use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>

</resources>
