<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_today_attendance"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Mark Attendance" />
        <item
            android:id="@+id/nav_track_attendance"
            android:title="@string/nav_self_track">
        </item>
        <item
            android:id="@+id/nav_to_do"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_to_do" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />
        <item android:id="@+id/nav_fingerprint_record"
              android:title="Fingerprint Attendence" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>
</menu>